版本更新至1.0.0-beta1

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,6 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-useMavenLocal=true
+useMavenLocal=false
 
-plugin_version=1.0.0
+plugin_version=1.0.0-beta1
