版本更新至1.0.0-beta1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
-apply from: 'xmlclassguard.gradle'
+//apply from: 'xmlclassguard.gradle'
 
 android {
     compileSdk 31
