rootProject.name 更改

--- a/plugin/maven.gradle
+++ b/plugin/maven.gradle
@@ -5,7 +5,7 @@ publishing {
         release(MavenPublication) {
             from components.java
             groupId 'com.github.liujingxing'
-            artifactId 'xml-class-guard-plugin'
+            artifactId 'XmlClassGuard'
             version "$plugin_version"
         }
     }
