--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
-        classpath "com.github.liujingxing:XmlClassGuard:$plugin_version"
+//        classpath "com.github.liujingxing:XmlClassGuard:$plugin_version"
     }
 }
 
