增加调试配置

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-useMavenLocal=false
+#org.gradle.daemon=true
+#org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
 plugin_version=1.0.0-beta2
