版本升级至1.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,4 +25,6 @@ android.nonTransitiveRClass=true
 #org.gradle.daemon=true
 #org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
-plugin_version=1.0.0-beta2
+useMavenLocal=false
+
+plugin_version=1.0.0
