--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -24,5 +24,5 @@ task copyJavaTemplates(type: Copy) {
 
 dependencies {
     implementation gradleApi()
-    implementation localGroovy()
+    api 'org.codehaus.groovy:groovy-xml:3.0.8'
 }
