--- a/app/xmlclassguard.gradle
+++ b/app/xmlclassguard.gradle
@@ -2,6 +2,11 @@ apply plugin: "xml-class-guard"
 
 //以下均为非必须，根据自己需要配置即可
 xmlClassGuard {
+    /*
+     * 是否查找约束布局的constraint_referenced_ids属性的值，并添加到AabResGuard的白名单中，
+     * 是的话，要求你在XmlClassGuard前依赖AabResGuard插件，默认false
+     */
+    findConstraintReferencedIds = true
     //混淆映射文件
     mappingFile = file("xml-class-mapping.txt")
     //更改manifest里package属性
