--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,11 @@ buildscript {
         } else {
             maven { url 'https://jitpack.io' }
         }
+        maven { url 'https://raw.githubusercontent.com/martinloren/AabResGuard/mvn-repo' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath "com.bytedance.android:aabresguard-plugin:0.1.10"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 //        classpath "com.github.liujingxing:XmlClassGuard:$plugin_version"
     }
