--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "com.bytedance.android:aabresguard-plugin:0.1.10"
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
-//        classpath "com.github.liujingxing:XmlClassGuard:$plugin_version"
+        classpath "com.github.liujingxing:XmlClassGuard:$plugin_version"
     }
 }
 
