--- a/app/xmlclassguard.gradle
+++ b/app/xmlclassguard.gradle
@@ -12,5 +12,6 @@ xmlClassGuard {
     //更改manifest里package属性
     packageChange = ["com.ljx.example": "ab.cd"]
     //移动目录，支持同时移动多个目录
-    moveDir = ["com.ljx.example": "ef.gh"]
+    moveDir = ["com.ljx.example": "ef.gh",
+               "com.ljx.base": "zzzz.hhhh"]
 }
