--- a/gradle.properties
+++ b/gradle.properties
@@ -27,4 +27,5 @@ android.nonTransitiveRClass=true
 
 useMavenLocal=false
 
-plugin_version=1.0.3
+#版本发布时，除升级版本号外，还需要将XmlClassGuard的依赖注释掉
+plugin_version=1.1.0
