--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    repositories {
-        google()
-        mavenCentral()
-        if ("true" == useMavenLocal) {
-            mavenLocal()
-        } else {
-            maven { url 'https://jitpack.io' }
-        }
-        maven { url 'https://raw.githubusercontent.com/martinloren/AabResGuard/mvn-repo' }
-    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "com.bytedance.android:aabresguard-plugin:0.1.10"
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0'
         classpath "com.github.liujingxing:XmlClassGuard:$plugin_version"
     }
+}
+
+plugins {
+    id 'com.android.application' version '7.2.1' apply false
+    id 'com.android.library' version '7.2.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
