--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
+#org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache-problems=warn
 #org.gradle.daemon=true
 #org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
