--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply from: 'aabresguard.gradle'
 apply from: 'xmlclassguard.gradle'
 
 android {
+    namespace 'com.ljx.example'
     compileSdk 31
 
     defaultConfig {
