支持将constraint_referenced_ids属性的值，添加到AndResGuard的白名单中，开启后，打包时自动执行

--- a/app/xmlclassguard.gradle
+++ b/app/xmlclassguard.gradle
@@ -6,7 +6,14 @@ xmlClassGuard {
      * 是否查找约束布局的constraint_referenced_ids属性的值，并添加到AabResGuard的白名单中，
      * 是的话，要求你在XmlClassGuard前依赖AabResGuard插件，默认false
      */
-    findConstraintReferencedIds = true
+    findAabConstraintReferencedIds = true
+
+    /*
+     * 是否查找约束布局的constraint_referenced_ids属性的值，并添加到AndResGuard的白名单中，
+     * 是的话，要求你在XmlClassGuard前依赖AabResGuard插件，默认false
+     */
+    findAndConstraintReferencedIds = false
+
     //混淆映射文件
     mappingFile = file("xml-class-mapping.txt")
     //更改manifest里package属性
