--- a/gradle.properties
+++ b/gradle.properties
@@ -30,4 +30,4 @@ android.nonTransitiveRClass=true
 useMavenLocal=false
 
 #版本发布时，除升级版本号外，还需要将XmlClassGuard的依赖注释掉
-plugin_version=1.1.3-beta3
+plugin_version=1.2.0
