修复一个类中有多个内部类时，执行xmlclassguard任务后，清单文件报错问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
 
         <service android:name=".TestInnerClass$NotifyJobService" />
+        <service android:name=".TestInnerClass$P0" />
+        <service android:name=".TestInnerClass$P1" />
     </application>
 
 </manifest>
