版本升级至1.2.1-beta1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 apply from: 'aabresguard.gradle'
 
-//apply from: 'xmlclassguard.gradle'
+apply from: 'xmlclassguard.gradle'
 
 android {
     namespace 'com.ljx.example'
