支持检索并混淆dataBinding中variable/import标签所引用的类 fix #18

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 dependencies {
