--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,8 @@ android.nonTransitiveRClass=true
 #org.gradle.daemon=true
 #org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
 
+jdk_version=11
+
 useMavenLocal=false
 
 #版本发布时，除升级版本号外，还需要将XmlClassGuard的依赖注释掉
