--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -24,8 +24,15 @@ task copyJavaTemplates(type: Copy) {
 
 dependencies {
     compileOnly gradleApi()
-    api 'org.codehaus.groovy:groovy-xml:3.0.9'
-    compileOnly 'com.android.tools.build:gradle:7.4.1'
+    api 'org.codehaus.groovy:groovy-xml:3.0.13'
+    compileOnly 'com.android.tools.build:gradle:8.0.2'
     compileOnly "com.bytedance.android:aabresguard-plugin:0.1.10"
     compileOnly 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.21'
+}
+
+sourceCompatibility = "$jdk_version"
+targetCompatibility = "$jdk_version"
+
+kotlin {
+    jvmToolchain(jdk_version as int)
 }
