--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.ljx.example.activity.LoginActivity" />
 
         <service android:name=".TestInnerClass$NotifyJobService" />
         <service android:name=".TestInnerClass$P0" />
