上传测试代码

--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -25,9 +25,12 @@ task copyJavaTemplates(type: Copy) {
 dependencies {
     compileOnly gradleApi()
     api 'org.codehaus.groovy:groovy-xml:3.0.13'
+    implementation 'org.ow2.asm:asm:9.3'
     compileOnly 'com.android.tools.build:gradle:8.0.2'
     compileOnly "com.bytedance.android:aabresguard-plugin:0.1.10"
     compileOnly 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.21'
+
+    testImplementation 'junit:junit:4.13.2'
 }
 
 sourceCompatibility = "$jdk_version"
