--- a/app/xmlclassguard.gradle
+++ b/app/xmlclassguard.gradle
@@ -18,8 +18,10 @@ xmlClassGuard {
     mappingFile = file("xml-class-mapping.txt")
     //更改manifest里package属性
     packageChange = ["com.ljx.example": "ab.cd",
-                     "com.ljx.base"   : "ggg.kkk"]
+                     "com.ljx.base"   : "ggg.kkk",
+                     "com.ljx.kts"    : "ff.dd"]
     //移动目录，支持同时移动多个目录
     moveDir = ["com.ljx.example": "ef.gh",
-               "com.ljx.base"   : "zzzz.hhhh"]
+               "com.ljx.base"   : "zzzz.hhhh",
+               "com.ljx.kts"    : "ddd.xxx"]
 }
